【新增】编译模块参数